[package]
name = "shmem"
version = "0.3.0"
authors = [
    "Leo Gaspard <leo@standard.ai>",
    "Simonas Kazlauskas <simonas@standard.ai>",
    "Bernardo Meurer <bernardo@standard.ai>"
]
publish = false
edition = "2015"

[dependencies]
errno = "0.2"
failure = "0.1"
failure_derive = "0.1"
interprocess-traits = "0.1.1"
libc = "0.2.58"
memfd = "0.2"

[dev-dependencies]
sendfd = "0.2"
