[package]
name = "caring"
version = "0.1.1"
authors = [
    "Leo Gaspard <leo@standard.ai>",
    "Simonas Kazlauskas <simonas@standard.ai>",
    "Bernardo Meurer <bernardo@standard.ai>"
]
edition = "2015"
description = "Sharing is caring: a safe library for mmap'ing memory in multiple processes"
readme = "README.md"
repository = "https://github.com/standard-ai/caring"
license = "Apache-2.0 OR BSD-3-Clause"
keywords = ["mmap", "memory-map", "io", "memmap"]
categories = ["concurrency"]

[badges]
is-it-maintained-issue-resolution = { repository = "standard-ai/caring" }
is-it-maintained-open-issues = { repository = "standard-ai/caring" }
maintenance = { status = "actively-developed" }

[dependencies]
errno = "0.2"
failure = "0.1"
failure_derive = "0.1"
interprocess-traits = "0.1.1"
libc = "0.2.58"
memfd = "0.2"

[dev-dependencies]
sendfd = "0.2"
